--- a/src/app/pages/home/components/whytv-channel-carousel/carousel.component.css
+++ b/src/app/pages/home/components/whytv-channel-carousel/carousel.component.css
@@ -7,7 +7,6 @@
 }
 
 .scene {
-  z-index: 1;
   position: relative;
   width: 600px;
   height: 140px;
@@ -25,7 +24,6 @@
 }
 
 .carousel__channel {
-  z-index: 10;
   position: absolute;
   width: 190px;
   height: 120px;
@@ -49,7 +47,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 5;
   background: rgba(0, 0, 0, 0.5);
 }
 
